<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntelligentHomeAnywhere</string>
    <string name="app_id">1411635335720288</string>
    <!-- Titles -->
    <string name="title_activity_locaction_screen">Locations</string>
    <string name="title_activity_data_of_locacion_screen">Devices</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_add_sensor">Add Sensor</string>
    <string name="title_activity_sensor_detail">Sensor Detail</string>
    <string name="title_activity_add_adapter">Add Adapter</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_login_facebook">Facebook</string>
    <string name="title_activity_widget_configuration">Widget Configuration</string>
    <!-- Buttons -->
    <string name="splash_demo">Demo</string>
    <string name="login_login">Login</string>
    <string name="notification_ingore">Ignore</string>
    <string name="notification_add">Add</string>
    <string name="change_location_name_button">Change</string>
    <string name="registration_button">Registration</string>
    <string name="splash_refresh">Refresh</string>
    <!-- Labels -->
    <string name="login_app_name">Intelligent Home Anywhere</string>
    <string name="login_or_use">or use</string>
    <string name="notification_notification">Notification</string>
    <string name="notification_new_sensor">New sensor found at your home</string>
    <string name="addsensor_add_sensor">Add sensor</string>
    <string name="addsensor_or">or</string>
    <string name="sensordetail_last_value">Last value:\u0020</string>
    <string name="sensordetail_refresh_time">Refresh inteval: </string>
    <string name="sensordetail_battery_state">Battery state</string>
    <string name="sensor_open">Open</string>
    <string name="sensor_close">Close</string>
    <string name="update_needed">Please update application</string>
    <string name="addsensor_type">Type of sensor:</string>
    <string name="addsensor_involved_time">Activated at:</string>
    <string name="change_location_name_label">New name</string>
    <string name="addadapter_add_adapter">Add adapter</string>
    <string name="registration_label">New account</string>
    <string name="registration_serial_number">For adapter with serial number:</string>
    <string name="splash_no_connection">No connection, check and turn on your internet connection and press refresh, or run Demo</string>
    <string name="splash_no_adapter">There is not adapter to connect, please turn adapter on, or run Demo</string>
    <!-- RadioButtons -->
    <string name="login_radio_facebook">Facebook account</string>
    <string name="login_radio_google">Google account</string>
    <string name="login_radio_mojeid">MojeID</string>
    <!-- Hints -->
    <string name="login_user_name_hint">Login/email</string>
    <string name="login_password_hint">Password</string>
    <string name="addsensor_sensor_name_hint">Name of new sensor</string>
    <string name="addsensor_new_location_hint">New location</string>
    <string name="change_location_name_edittext_hint">New name of location</string>
    <string name="change_device_name_edittext_hint">New name of sensor</string>
    <string name="addadapter_ser_num_hint">Input of serial number</string>
    <string name="registration_password_repeat_hint">Repeat password</string>
    <!-- Toasts -->
    <string name="toast_changeto">\u0020changed to:\u0020</string>
    <string name="toast_new_sensor_added">New sensor was added</string>
    <string name="toast_need_sensor_name">Write name of sensor please</string>
    <string name="toast_bad_password">Wrong name or password</string>
    <string name="toast_connecting_to_server">Connecting to server &#8230;</string>
    <string name="toast_welcome_text">Welcome </string>
    <!-- Others -->
    <string name="action_settings">Settings</string>
    <string name="addadapter_qrcode_desc">Get QR code</string>
    <!-- Units -->
    <string name="temperature_C">°C</string>
    <string name="humidity_percent">%</string>
    <string name="pressure_Pa">hPa</string>
    <string name="illumination_lux">lux</string>
    <string name="noise_dB">dB</string>
    <string name="emission_ppm">ppm</string>
    <!-- Type of sensors -->
    <string name="temperature">thermal sensor</string>
    <string name="humidity">hzgrometer</string>
    <string name="pressure">barometer</string>
    <string name="switch_s">switch sensor</string>
    <string name="switch_c">switch controller</string>
    <string name="illumination">lighting sensor</string>
    <string name="noise">sound level meter</string>
    <string name="emission">emission meter</string>
    <string name="unknown">unknown device type</string>
    <!-- Arrays -->
    <string-array name="registration_spinner">
        <item>Facebook</item>
        <item>Google</item>
        <item>MojeID</item>
    </string-array>
    <string-array name="items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>
    <string name="log_sc_or">or</string>

        
    <!-- GOOGLE -->
    <string name="common_google_play_services_install_title" msgid="26645092511305524">"Instalovat služby Google Play"</string>
    <string name="common_google_play_services_install_text_phone" msgid="8685301130651051380">"Ke spuštění této aplikace jsou potřeba služby Google Play, které v telefonu nemáte."</string>
    <string name="common_google_play_services_install_text_tablet" msgid="1589957570365247855">"Ke spuštění této aplikace jsou potřeba služby Google Play, které v tabletu nemáte."</string>
    <string name="common_google_play_services_install_button" msgid="8515591849428043265">"Instalovat služby Google Play"</string>
    <string name="common_google_play_services_enable_title" msgid="529078775174559253">"Aktivovat služby Google Play"</string>
    <string name="common_google_play_services_enable_text" msgid="7627896071867667758">"Ke spuštění této aplikace je třeba aktivovat služby Google Play."</string>
    <string name="common_google_play_services_enable_button" msgid="4181637455539816337">"Aktivovat služby Google Play"</string>
    <string name="common_google_play_services_update_title" msgid="6006316683626838685">"Aktualizace služeb Google Play"</string>
    <string name="common_google_play_services_update_text" msgid="448354684997260580">"Ke spuštění této aplikace je třeba aktualizovat služby Google Play."</string>
    <string name="common_google_play_services_network_error_title" msgid="3827284619958211114">"Chyba sítě"</string>
    <string name="common_google_play_services_network_error_text" msgid="9038847255613537209">"Připojení ke službám Google Play vyžaduje datové připojení."</string>
    <string name="common_google_play_services_invalid_account_title" msgid="1066672360770936753">"Neplatný účet"</string>
    <string name="common_google_play_services_invalid_account_text" msgid="4983316348021735578">"Zadaný účet v tomto zařízení neexistuje. Zvolte prosím jiný účet."</string>
    <string name="common_google_play_services_unknown_issue" msgid="4762332809710093730">"Nastal neznámý problém se službami Google Play."</string>
    <string name="common_google_play_services_unsupported_title" msgid="6334768798839376943">"Služby Google Play"</string>
    <string name="common_google_play_services_unsupported_text" msgid="3542578567569488671">"Některé vaše aplikace vyžadují služby Google Play, které ve vašem zařízení nejsou podporovány. S žádostí o pomoc se prosím obraťte na výrobce."</string>
    <string name="common_google_play_services_update_button" msgid="8932944190611227642">"Aktualizovat"</string>
    <string name="common_signin_button_text" msgid="9071884888741449141">"Přihlásit se"</string>
    <string name="common_signin_button_text_long" msgid="2429381841831957106">"Přihlásit se účtem Google"</string>

    <string name="auth_client_using_bad_version_title" msgid="2534454398764507874">"Aplikace se pokusila použít nesprávnou verzi Služeb Google Play."</string>
    <string name="auth_client_needs_enabling_title" msgid="3983201110833868073">"Aplikace vyžaduje aktivované Služby Google Play."</string>
    <string name="auth_client_needs_installation_title" msgid="7999585836145154206">"Aplikace vyžaduje instalaci Služeb Google Play."</string>
    <string name="auth_client_needs_update_title" msgid="6488605506794595966">"Aplikace vyžaduje aktualizaci Služeb Google Play."</string>
    <string name="auth_client_play_services_err_notification_msg" msgid="3635065018897986478">"Chyba služeb Google Play"</string>
    <string name="auth_client_requested_by_msg" msgid="6304135633531965756">"Požadováno aplikací "</string>

    <!-- Widgets -->
    <string name="widget_sensor_title">Sensor detail</string>
    <!-- Placeholders -->
	<string name="placeholder_icon">Icon</string>
	<string name="placeholder_none">Loading</string>
	<!-- WidgetConfigurationActivity -->
	<string name="widget_configuration_sensor">Sensor to be shown:</string>
	<string name="widget_configuration_interval">Update interval (sec.):</string>
	<string name="login_txt_remember_me">Remember Me</string>

</resources>