<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="225dp"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:padding="12dip" >

    <TextView
        android:id="@+id/notification_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="12dip"
        android:text="@string/notification_notification"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/notification_new_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dip"
        android:text="@string/notification_new_sensor"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />
    
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal">
	    
		<Button
	        android:id="@+id/notification_ingore"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:text="@string/notification_ingore" />
	
	    <Button
	        android:id="@+id/notification_add"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:text="@string/notification_add" />
	    
	</LinearLayout>
	
</LinearLayout>