<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity" 
    android:background="@color/blue"
    >

    <TextView
        android:id="@+id/registration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/registration_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/registration_serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registration_label"
        android:layout_below="@+id/registration_label"
        android:layout_marginTop="10dp"
        android:text="@string/registration_serial_number"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/registration_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_serial_number"
        android:layout_marginTop="20dp"
        android:inputType="textNoSuggestions|textEmailAddress|textPersonName"
        android:hint="@string/login_user_name_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_user_name"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registration_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_password"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/registration_password_repeat_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/registration_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/registration_label"
        android:layout_below="@+id/registration_password_repeat"
        android:layout_marginTop="20dp"
        android:text="@string/addsensor_or"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/registration_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registration_password_repeat"
        android:layout_below="@+id/registration_or"
        android:entries="@array/registration_spinner"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/registration_button" />

</RelativeLayout>
