<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddAdapterActivity" >

    <TextView
        android:id="@+id/addadapter_add_adapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/addadapter_add_adapter"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<EditText
	    android:id="@+id/addadapter_ser_num"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/addadapter_add_button"
	    android:layout_alignLeft="@+id/addadapter_add_adapter"
	    android:layout_marginBottom="70dp"
	    android:ems="10"
	    android:hint="@string/addadapter_ser_num_hint"
	    android:inputType="textNoSuggestions" />

	<ImageButton
	    android:id="@+id/addadapter_qrcode_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/addadapter_or"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="30dp"
	    android:contentDescription="@string/addadapter_qrcode_desc"
	    android:onClick="addMethodQRCode"
	    android:src="@drawable/qrcode" />

	<TextView
	    android:id="@+id/addadapter_or"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/addadapter_ser_num"
	    android:layout_marginBottom="35dp"
	    android:layout_centerHorizontal="true"
	    android:text="@string/addsensor_or"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Button
	    android:id="@+id/addadapter_add_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="60dp"
	    android:onClick="addMethodSerialNumber"
	    android:text="@string/notification_add" />

</RelativeLayout>