<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="225dp"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:padding="12dip" >

    <TextView
        android:id="@+id/change_device_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="12dip"
        android:text="@string/change_location_name_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/change_device_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_device_name_edittext_hint"
        android:inputType="textNoSuggestions"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal">
	    
	    <Button
	        android:id="@+id/change_device_name_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="changeMethod"
	        android:text="@string/change_location_name_button" />
	    
	</LinearLayout>
	
</LinearLayout>